<resources>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_resume_game">Resume Game</string>
    <string name="btn_settings_game">Settings</string>
    <string name="btn_exit_game">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sound">SOUND ON</string>
    <string name="music">MUSIC ON</string>
    <string name="vibrate">VIBRATE ON</string>
    <string name="graphics">GRAPHICS ON</string>
    <string name="email_sign_up">user@email.com</string>
    <string name="button_sign_up">Registrar</string>
    <string name="text_sign_up">Novo por aqui? Cadastre-se!</string>
    <string name="email_sign_in">user@email.com</string>
    <string name="button_sign_in">Entrar</string>
    <string name="pass_sign_in">password</string>
    <string name="text_sign_in">Login</string>
    <string name="btn_account">Account</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="remember_login">Lembrar-me</string>
    <string name="tamamon_name">tamamon\'s name</string>
    <string name="new_battle">Batalhar!</string>

</resources>