<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#1c6b6a"
    android:gravity="center" >

    <TextView
        android:id="@+id/text_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/text_sign_in"
        android:textColor="#e6e2e1"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/email_sign_in"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/text_sign_in"
        android:layout_margin="3dp"
        android:hint="@string/email_sign_in"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass_sign_in"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/email_sign_in"
        android:layout_margin="3dp"
        android:hint="@string/pass_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/pass_sign_in"
        android:layout_toRightOf="@id/pass_sign_in"
        android:onClick="onClick"
        android:text="@string/button_sign_in" />

    <CheckBox
        android:id="@+id/remember_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass_sign_in"
        android:layout_below="@+id/button_sign_in"
        android:text="@string/remember_login"
        android:textColor="#e6e2e1" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remember_login"
        android:layout_margin="3dp"
        android:paddingTop="10dp"
        android:text="@string/text_sign_up"
        android:textColor="#e6e2e1"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_sign_up"
        android:layout_margin="3dp"
        android:hint="@string/email_sign_up"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/tamamon_name"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/email_sign_up"
        android:hint="@string/tamamon_name" >
	</EditText>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/email_sign_up"
        android:layout_alignTop="@+id/tamamon_name"
        android:onClick="onClick"
        android:text="@string/button_sign_up" />

</RelativeLayout>